@@ -7,6 +7,7 @@
   --enable-apic \
   --enable-x86-64 \
   --enable-all-optimizations \
+  --enable-long-phy-address \
   --enable-large-pages \
   --enable-pae \
   --enable-global-pages \
